Changed Superpage, added some prop and changed access mod.

--- a/AliExpressAutomation/Pages/Pages.csproj
+++ b/AliExpressAutomation/Pages/Pages.csproj
@@ -21,6 +21,7 @@
     <Folder Include="VasylPages\" />
     <Folder Include="VaniaPages\" />
     <Folder Include="YuraPages\" />
+    <Folder Include="HelpClasses\" />
   </ItemGroup>
 
 </Project>
