--- a/AliExpress.Pages/AliExpress.Pages.csproj
+++ b/AliExpress.Pages/AliExpress.Pages.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\AliExpress.Helpers\AliExpress.Helpers.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
