--- a/AliExpress.Helpers/AliExpress.Helpers.csproj
+++ b/AliExpress.Helpers/AliExpress.Helpers.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="3.14.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
+  </ItemGroup>
+
 </Project>
