--- a/AliExpress.Tests/AliExpress.Tests.csproj
+++ b/AliExpress.Tests/AliExpress.Tests.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="nunit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Selenium.Support" Version="3.14.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
   </ItemGroup>
 
   <ItemGroup>
