Updated links to ExpectedConditions class to get rid of deprecated warning.

--- a/AliExpressAutomation/Pages/Pages.csproj
+++ b/AliExpressAutomation/Pages/Pages.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="2.41.0" />
