--- a/Demo4/Pages/Pages.csproj
+++ b/Demo4/Pages/Pages.csproj
@@ -16,4 +16,11 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="DatabaseStuff\MainTable.cs" />
+    <Compile Remove="DatabaseStuff\NoSql.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DatabaseStuff\Tables\" />
+  </ItemGroup>
 </Project>
