--- a/Demo4/Test/Tests.csproj
+++ b/Demo4/Test/Tests.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Allure.Commons" Version="2.4.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="NUnit.Allure" Version="1.0.4" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="2.42.0" />
     <PackageReference Include="Selenium.Support" Version="3.14.0" />
